Etapa2-Parser/Gramatica
Block   ->   TkOBlock Content TkCBlock
        |   TkOBlock TkDeclare Declaration Content TkCBlock
        |   TkOBlock TkDeclare Declaration TkCBlock


Declaration ->   Variables TkTwoPoints Datatype
            |   Variables TkTwoPoints Datatype TkSemicolon Declaration
     

Array   ->   TkArray TkOBracket Terminal TkSoForth Terminal TkCBracket
        |   TkArray TkOBracket AritmeticOperator TkSoForth AritmeticOperator TkCBracket


Terminal ->  TkId
            | TkString
            | TkNum
            | TkTrue
            | TkFalse
            | TkQuote
            | TkOpenPar Terminal TkClosePar


Content ->   Instruction
        |   Instruction TkSemicolon Content
        |   Block TkSemicolon Content
        |   Block
    

Instruction ->   Conditional
            |   Forloop
            |   Doloop
            |   Asign
            |   Input
            |   Output


Conditional ->   TkIf Expression TkArrow Content TkFi
            |   TkIf Expression TkArrow Content Guard TkFi


Guard   ->   TkGuard Expression TkArrow Content
        |   TkGuard Expression TkArrow Content Guard


Asign    ->   TkId TkAsig Expression


Input   ->   TkRead TkId


Output   ->   TkPrint Expression
        |   TkPrint Expression ConcatExpression
        |   TkPrintln Expression
        |   TkPrintln Expression ConcatExpression


ConcatExpression -> TkConcat Expression
                |   TkConcat Expression ConcatExpression


Doloop ->   TkDo Expression TkArrow Content TkOd
        |   TkDo Expression TkArrow Content Guard TkOd 


Forloop -> TkFor TkId TkIn Expression TkTo Expression TkArrow Content TkRof


Expression  ->   AritmeticOperator
            |   Terminal
            |   RelationalOperator
            |   BooleanOperator
            |   StrOperator
            |   ArrayOperator
            |   ArrayExpression


ArrayExpression ->   ArrayExpression TkOpenPar Terminal TkTwoPoints Terminal TkClosePar
                |   TkId TkOpenPar Terminal TkTwoPoints Terminal TkClosePar
                |   ArrayExpression TkOBracket Terminal TkCBracket
                |   TkId TkOBracket Terminal TkCBracket


AritmeticOperator -> Expression TkMinus Expression
                |   Expression TkPlus Expression
                |   Expression TkDiv Expression
                |   Expression TkMult Expression
                |   Expression TkMod Expression
                |   TkOpenPar Expression TkMinus Expression TkClosePar
                |   TkOpenPar Expression TkPlus Expression TkClosePar
                |   TkOpenPar Expression TkDiv Expression TkClosePar
                |   TkOpenPar Expression TkMult Expression TkClosePar
                |   TkOpenPar Expression TkMod Expression TkClosePar
                |   TkMinus Expression %prec uminus
                |   TkOpenPar TkMinus Expression TkClosePar %prec uminus
	
		
StrOperator -> TkId TkConcat TkId
            | TkOpenPar TkId TkConcat TkId TkClosePar


ArrayOperator   ->   TkSize TkOpenPar TkId TkClosePar
                | TkMax TkOpenPar TkId TkClosePar
                | TkMin TkOpenPar TkId TkClosePar
                | TkAtoi TkOpenPar TkId TkClosePar
                | TkSize TkOpenPar Array TkClosePar
                | TkMax TkOpenPar Array TkClosePar
                | TkMin TkOpenPar Array TkClosePar
                | TkAtoi TkOpenPar Array TkClosePar


RelationalOperator -> Expression TkLess Expression
                    |   Expression TkLeq Expression
                    |   Expression TkGreater Expression
                    |   Expression TkGeq Expression
                    |   Expression TkEqual Expression
                    |   Expression TkNEqual Expression
                    |   TkOpenPar Expression TkGreater Expression TkClosePar
                    |   TkOpenPar Expression TkGeq Expression TkClosePar
                    |   TkOpenPar Expression TkLess Expression TkClosePar
                    |   TkOpenPar Expression TkLeq Expression TkClosePar
                    |   TkOpenPar Expression TkEqual Expression TkClosePar
                    |   TkOpenPar Expression TkNEqual Expression TkClosePar


Variables -> TkId TkComma Variables
        | TkId    


BooleanOperator -> Expression TkAnd Expression
                |   Expression TkOr Expression
                |   TkOpenPar Expression TkAnd Expression TkClosePar
                |   TkOpenPar Expression TkOr Expression TkClosePar
                |   TkNot Expression
                |   TkOpenPar TkNot Expression TkClosePar


Datatype -> TkInt
        |   Array
        |   TkBool
        |   TkInt TkComma Datatype
        |   TkBool TkComma Datatype
        |   Array TkComma Datatype
